--- a/client-myjss/src/app/modules/miscellaneous/components/forms/generic-textarea/generic-textarea.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/forms/generic-textarea/generic-textarea.component.html
@@ -4,6 +4,6 @@
       class="form-label">{{label}}</label>
     <textarea (keyup)="onInputChange()" (keydown)="onInputChange()" (paste)="onInputChange()" [rows]="numberOfLines"
       matInput [formControlName]="propertyName" [placeholder]="label" [maxlength]="maxLength+''"
-      [minlength]="minLength+''"></textarea>
+      [minlength]="minLength+''" class="form-control"></textarea>
   </div>
 </div>
