second working version

--- a/client/src/app/modules/crm/components/myjss-comment-management/myjss-comment-management.component.html
+++ b/client/src/app/modules/crm/components/myjss-comment-management/myjss-comment-management.component.html
@@ -7,7 +7,7 @@
             <table class="full-width table-fixed-layout" *ngIf=" commentSearch">
               <tr>
                 <td>
-                  <autocomplete-post [(model)]="commentSearch.postTitle" label="Titre de l'article"
+                  <autocomplete-post [(model)]="commentSearch.post" label="Titre de l'article"
                     [form]="commentSearchForm" propertyName="postTitle" [isMandatory]=" false">
                   </autocomplete-post>
                 </td>
