--- a/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
+++ b/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
@@ -105,7 +105,8 @@
               </ul>
             </li>
             <li class="nav-item col col-md-auto">
-              <a class="nav-link " style="cursor: pointer;" (click)="$event">Commande / Devis</a>
+              <a class="nav-link " style="cursor: pointer;" [routerLink]="'quotation/identification'">Commande /
+                Devis</a>
             </li>
             <li class="nav-item col col-md-auto">
               <a class="nav-link " style="cursor: pointer;" (click)="$event">Démo</a>
@@ -152,7 +153,7 @@
             </ul>
           </li>
           <li class="nav-item col col-md-auto">
-            <a class="nav-link " style="cursor: pointer;" (click)="$event">Commande / Devis</a>
+            <a class="nav-link " style="cursor: pointer;" [routerLink]="'quotation/identification'">Commande / Devis</a>
           </li>
           <li class="nav-item col col-md-auto">
             <a class="nav-link " style="cursor: pointer;" (click)="$event">Démo</a>
