--- a/client-myjss/src/app/modules/miscellaneous/components/forms/radio-group-affaire-type/radio-group-affaire-type.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/forms/radio-group-affaire-type/radio-group-affaire-type.component.html
@@ -1,6 +1,7 @@
 <form [formGroup]="form!">
-  <div *ngFor="let type of types" [formControlName]="propertyName">
-    <input type="radio" [id]="type" name="radio" [value]="type" [checked]="model && model.id === type.id">
+  <div *ngFor="let type of types">
+    <input type="radio" [id]="type" [formControlName]="propertyName" [value]="type"
+      [checked]="model && model.id === type.id">
     <label [for]="type"> {{type.label}}</label>
   </div>
 </form>
