--- a/client-myjss/src/app/modules/tools/components/post/post.component.html
+++ b/client-myjss/src/app/modules/tools/components/post/post.component.html
@@ -140,105 +140,111 @@
 
       <!-- Comments -->
       <div class="pt-4 pt-xl-5 my-4" id="comments">
-        <h2 class="h1 py-lg-1 py-xl-3">{{commentsPagination.totalElements || 0}} commentaires</h2>
+        <h2 class="h1 py-lg-1 py-xl-3" *ngIf="!commentsPagination.totalElements">0 Commentaire </h2>
+        <h2 class="h1 py-lg-1 py-xl-3" *ngIf="commentsPagination.totalElements">{{commentsPagination.totalElements <= 1
+            ? commentsPagination.totalElements + " Commentaire" : commentsPagination.totalElements + " Commentaires" }}
+            </h2>
 
-        <div class="pt-2 pb-4" *ngIf="commentsPagination.totalElements!=0">
+            <div class="pt-2 pb-4" *ngIf="commentsPagination.totalElements!=0">
 
-          <!-- Comment -->
-          <div *ngFor="let comment of comments">
-            <div class="py-4 mt-2 mb-4 border-bottom">
-              <div>
-                <div class="d-flex align-items-center pb-1 mb-3">
-                  <avatar class="avatar-select rounded-circle" [user]="getResponsable(comment)" [size]="50"
-                    [centerAvatar]="false" alt="Comment author"></avatar>
-                  <div class="ps-3">
-                    <h6 class="mb-0">{{comment.authorFirstName}} {{comment.authorLastName[0]}}.</h6>
-                    <span class="fs-sm text-body-secondary">{{comment.creationDate | date:'dd/MM/yyyy'}}</span>
+              <!-- Comment -->
+              <div *ngFor="let comment of comments" [attr.id]="comment.id">
+                <div class="py-4 mt-2 mb-4 border-bottom">
+                  <div>
+                    <div class="d-flex align-items-center pb-1 mb-3">
+                      <avatar class="avatar-select rounded-circle" [user]="getResponsableNames(comment)" [size]="50"
+                        [centerAvatar]="true" alt="Comment author"></avatar>
+                      <div class="ps-3">
+                        <h6 class="mb-0">{{comment.authorFirstName}} {{comment.authorLastNameInitials}}.</h6>
+                        <span class="fs-sm text-body-secondary">{{comment.creationDate | date:'dd/MM/yyyy'}}</span>
+                      </div>
+                    </div>
+                    <p class="pb-2 mb-0">{{comment.content}}</p>
+                    <button class="nav-link fs-sm fw-semibold px-0 py-2 " type="button" (click)="replyComment(comment)">
+                      Répondre
+                      <i class="ai-redo fs-xl ms-2"></i>
+                    </button>
                   </div>
-                </div>
-                <p class="pb-2 mb-0">{{comment.content}}</p>
-                <button class="nav-link fs-sm fw-semibold px-0 py-2 " type="button" (click)="replyComment(comment)">
-                  Répondre
-                  <i class="ai-redo fs-xl ms-2"></i>
-                </button>
-              </div>
 
-              <!-- Comment reply -->
-              <div *ngIf="comment.childrenComments && comment.childrenComments.length > 0">
-                <div *ngFor="let children of comment.childrenComments" class="card card-body border-0 my-3">
-                  <div class="d-flex align-items-center pb-1 mb-3">
-                    <avatar class="avatar-select rounded-circle" [user]="getResponsable(children)" [size]="50"
-                      [centerAvatar]="false" alt="Comment author"></avatar>
-                    <div class="ps-3">
-                      <h6 class="mb-0">{{children.authorFirstName}}
-                        {{children.authorLastName[0]}}.
-                      </h6>
-                      <span class="fs-sm text-body-secondary">{{children.creationDate|
-                        date:'dd/MM/yyyy'}}</span>
+                  <!-- Comment reply -->
+                  <div *ngIf="comment.childrenComments && comment.childrenComments.length > 0">
+                    <div *ngFor="let children of comment.childrenComments" [attr.id]="children.id"
+                      class="card card-body border-0 my-3">
+                      <div class="d-flex align-items-center pb-1 mb-3">
+                        <avatar class="avatar-select rounded-circle" [user]="getResponsableNames(children)" [size]="50"
+                          [centerAvatar]="true" alt="Comment author"></avatar>
+                        <div class="ps-3">
+                          <h6 class="mb-0">{{children.authorFirstName}}
+                            {{children.authorLastNameInitials}}.
+                          </h6>
+                          <span class="fs-sm text-body-secondary">{{children.creationDate|
+                            date:'dd/MM/yyyy'}}</span>
+                        </div>
+                      </div>
+                      <p class="mb-0"><b
+                          class="fw-bold text-decoration-none citing-author">&commat;{{comment.authorFirstName}}
+                          {{children.authorLastNameInitials}}. </b>{{children.content}}</p>
                     </div>
                   </div>
-                  <p class="mb-0"><b
-                      class="fw-bold text-decoration-none citing-author">&commat;{{comment.authorFirstName}}
-                      {{comment.authorLastName[0]}}. </b>{{children.content}}</p>
                 </div>
               </div>
-            </div>
-          </div>
-          <div class="row d-flex justify-content-center align-items-center">
-            <a *ngIf="commentsPagination.totalElements-shownElements > 0"
-              class="d-flex justify-content-center gap-2 cursor-pointer nav-link p-2" (click)="showMoreComments()">
-              <span class="fw-semibold">Voir
-                plus</span><span>({{commentsPagination.totalElements-shownElements}})</span>
-              <i class="ai-circle-arrow-down fs-xl ms-2"></i>
-            </a>
-            <a *ngIf="commentsPagination.totalElements-shownElements <= 0"
-              class="d-flex justify-content-center gap-2 cursor-pointer nav-link p-2" (click)="showLessComments()">
-              <span class="fw-semibold">Voir moins</span>
-              <i class="ai-circle-arrow-up fs-xl ms-2"></i>
-            </a>
-          </div>
-        </div>
-
-        <!-- Comment form -->
-        <div id="commentForm" class="card border-0 pt-2 p-md-2 p-xl-3 p-xxl-4 mt-5 mt-md-0 mb-4">
-          <div class="card-body">
-            <div class="row justify-content-between align-items-center">
-              <h2 class="col-8 pb-2 pb-lg-3 pb-xl-4" *ngIf="!newCommentParent.id">Laisser un commentaire</h2>
-              <h2 class="col-8 pb-2 pb-lg-3 pb-xl-4" *ngIf="newCommentParent.id">Répondre à
-                {{newCommentParent.authorFirstName}} {{newCommentParent.authorLastName[0]}}.</h2>
-              <div class=" col-4 d-inline-flex justify-content-end pb-2 pb-lg-3 pb-xl-4" *ngIf="newCommentParent.id">
-                <a type="button" aria-label="Close" class="fs-sm" (click)="cancelReply()">
-                  Annuler la réponse
+              <div class="row d-flex justify-content-center align-items-center">
+                <a *ngIf="commentsPagination.totalElements>commentsPagination.pageSize && commentsPagination.totalElements-shownElements > 0"
+                  class="d-flex justify-content-center gap-2 cursor-pointer nav-link p-2" (click)="showMoreComments()">
+                  <span class="fw-semibold">Voir
+                    plus</span><span>({{commentsPagination.totalElements-shownElements}})</span>
+                  <i class="ai-circle-arrow-down fs-xl ms-2"></i>
+                </a>
+                <a *ngIf="commentsPagination.totalElements>commentsPagination.pageSize && commentsPagination.totalElements-shownElements <= 0"
+                  class="d-flex justify-content-center gap-2 cursor-pointer nav-link p-2" (click)="showLessComments()">
+                  <span class="fw-semibold">Voir moins</span>
+                  <i class="ai-circle-arrow-up fs-xl ms-2"></i>
                 </a>
               </div>
             </div>
-            <p>Votre adresse e-mail ne sera pas publiée. Les champs obligatoires sont indiqués avec *</p>
-            <form class="row needs-validation g-4" novalidate>
-              <div class="col-sm-4">
-                <generic-input [(model)]="newComment.authorFirstName" label="Prénom*" [form]="createCommentForm"
-                  propertyName="firstname" [isMandatory]="true" [isDisabled]="false"
-                  [isDisplayLabel]="true"></generic-input>
+
+            <!-- Comment form -->
+            <div id="commentForm" class="card border-0 pt-2 p-md-2 p-xl-3 p-xxl-4 mt-5 mt-md-0 mb-4">
+              <div class="card-body">
+                <div class="row justify-content-between align-items-center">
+                  <h2 class="col-8 pb-2 pb-lg-3 pb-xl-4" *ngIf="!newCommentParent.id">Laisser un commentaire</h2>
+                  <h2 class="col-8 pb-2 pb-lg-3 pb-xl-4" *ngIf="newCommentParent.id">Répondre à
+                    {{newCommentParent.authorFirstName}} {{newCommentParent.authorLastNameInitials}}.</h2>
+                  <div class=" col-4 d-inline-flex justify-content-end pb-2 pb-lg-3 pb-xl-4"
+                    *ngIf="newCommentParent.id">
+                    <a type="button" aria-label="Close" class="fs-sm" (click)="cancelReply()">
+                      Annuler la réponse
+                    </a>
+                  </div>
+                </div>
+                <p>Votre adresse e-mail ne sera pas publiée. Les champs obligatoires sont indiqués avec *</p>
+                <form class="row needs-validation g-4" novalidate>
+                  <div class="col-sm-4">
+                    <generic-input [(model)]="newComment.authorFirstName" label="Prénom*" [form]="createCommentForm"
+                      propertyName="firstname" [isMandatory]="true" [isDisabled]="false"
+                      [isDisplayLabel]="true"></generic-input>
+                  </div>
+                  <div class="col-sm-4">
+                    <generic-input [(model)]="newComment.authorLastName" label="Nom" [form]="createCommentForm"
+                      propertyName="lastname" [isMandatory]="false" [isDisabled]="false"
+                      [isDisplayLabel]="true"></generic-input>
+                  </div>
+                  <div class="col-sm-4">
+                    <generic-input [(model)]="newComment.mail.mail" label="Email*" [form]="createCommentForm"
+                      propertyName="mail" [isMandatory]="true" [isDisabled]="false"
+                      [isDisplayLabel]="true"></generic-input>
+                  </div>
+                  <div class="col-12">
+                    <generic-textarea [(model)]="newComment.content" label="Commentaire*" [form]="createCommentForm"
+                      propertyName="comment" [isMandatory]="true" [isDisabled]="false"
+                      [numberOfLines]="5"></generic-textarea>
+                  </div>
+                  <div class="col-12">
+                    <button class="btn btn-primary" type="submit" (click)="postComment()">Publier</button>
+                  </div>
+                </form>
               </div>
-              <div class="col-sm-4">
-                <generic-input [(model)]="newComment.authorLastName" label="Nom" [form]="createCommentForm"
-                  propertyName="lastname" [isMandatory]="false" [isDisabled]="false"
-                  [isDisplayLabel]="true"></generic-input>
-              </div>
-              <div class="col-sm-4">
-                <generic-input [(model)]="newComment.mail.mail" label="Email*" [form]="createCommentForm"
-                  propertyName="mail" [isMandatory]="true" [isDisabled]="false" [isDisplayLabel]="true"></generic-input>
-              </div>
-              <div class="col-12">
-                <generic-textarea [(model)]="newComment.content" label="Commentaire*" [form]="createCommentForm"
-                  propertyName="comment" [isMandatory]="true" [isDisabled]="false"
-                  [numberOfLines]="5"></generic-textarea>
-              </div>
-              <div class="col-12">
-                <button class="btn btn-primary" type="submit" (click)="postComment()">Publier</button>
-              </div>
-            </form>
-          </div>
-        </div>
+            </div>
       </div>
     </div>
 
