--- a/client-myjss/src/app/modules/tools/components/post/post.component.html
+++ b/client-myjss/src/app/modules/tools/components/post/post.component.html
@@ -12,7 +12,6 @@
     </ol>
   </nav>
 
-
   <div class="accordion-item border-top mb-0" *ngIf="!post">
     <div class="accordion-header">
       <p class="card-text placeholder-glow">
@@ -144,7 +143,6 @@
         <h2 class="h1 py-lg-1 py-xl-3" *ngIf="commentsPagination.totalElements">{{commentsPagination.totalElements <= 1
             ? commentsPagination.totalElements + " Commentaire" : commentsPagination.totalElements + " Commentaires" }}
             </h2>
-
             <div class="pt-2 pb-4" *ngIf="commentsPagination.totalElements!=0">
 
               <!-- Comment -->
@@ -189,13 +187,13 @@
                 </div>
               </div>
               <div class="row d-flex justify-content-center align-items-center">
-                <a *ngIf="commentsPagination.totalElements>commentsPagination.pageSize && commentsPagination.totalElements-shownElements > 0"
+                <a *ngIf="commentsPagination.totalElements>commentsPagination.pageSize && commentsPagination.totalElements-comments.length > 0"
                   class="d-flex justify-content-center gap-2 cursor-pointer nav-link p-2" (click)="showMoreComments()">
                   <span class="fw-semibold">Voir
-                    plus</span><span>({{commentsPagination.totalElements-shownElements}})</span>
+                    plus</span><span>({{commentsPagination.totalElements-comments.length}})</span>
                   <i class="ai-circle-arrow-down fs-xl ms-2"></i>
                 </a>
-                <a *ngIf="commentsPagination.totalElements>commentsPagination.pageSize && commentsPagination.totalElements-shownElements <= 0"
+                <a *ngIf="commentsPagination.totalElements>commentsPagination.pageSize && commentsPagination.totalElements-comments.length <= 0"
                   class="d-flex justify-content-center gap-2 cursor-pointer nav-link p-2" (click)="showLessComments()">
                   <span class="fw-semibold">Voir moins</span>
                   <i class="ai-circle-arrow-up fs-xl ms-2"></i>
