Correcting bugs after QA

--- a/client-myjss/src/app/modules/general/components/newsletter/newsletter.component.css
+++ b/client-myjss/src/app/modules/general/components/newsletter/newsletter.component.css
@@ -5,3 +5,15 @@
 h2 {
     color: var(--ar-heading-secondary-color);
 }
+
+.form-control {
+    color: var(--ar-info-text-emphasis);
+}
+
+.form-control:focus {
+    color: var(--ar-info-text-emphasis);
+}
+
+.form-control::placeholder {
+    color: var(--ar-info-text-emphasis);
+}
