--- a/client-myjss/src/assets/css/theme.css
+++ b/client-myjss/src/assets/css/theme.css
@@ -125,7 +125,7 @@
   --ar-primary-text-emphasis: #336a58;
   --ar-secondary-text-emphasis: #576071;
   --ar-success-text-emphasis: #2ea875;
-  --ar-info-text-emphasis: #2e66a8;
+  --ar-info-text-emphasis: #1c2d41;
   --ar-warning-text-emphasis: #e8bd22;
   --ar-danger-text-emphasis: #e82222;
   --ar-light-text-emphasis: #576071;
