Corrected background + added some missing components

--- a/client-myjss/src/assets/css/theme.css
+++ b/client-myjss/src/assets/css/theme.css
@@ -717,7 +717,7 @@ progress {
 
   /* background-image usage to add multiple SVG images */
   background-image:
-    url('../images/background1.svg');
+    url('../images/background.svg');
 
   /* Positionning of both images */
   background-position: top;
