--- a/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
+++ b/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
@@ -221,7 +221,7 @@
 </section>
 
 
-<section class=" py-5">
+<section class="py-5">
   <div class="container py-3 py-sm-4 py-lg-5 my-md-2 my-lg-3 my-xl-4 my-xxl-5 ">
     <div class=" text-center">
       <h2 class="h1 pb-3 mb-lg-4 text-white">Nos services</h2>
@@ -299,3 +299,5 @@
     </div>
   </div>
 </section>
+
+<our-clients></our-clients>
