--- a/client-myjss/src/app/modules/profile/components/footer/footer.component.html
+++ b/client-myjss/src/app/modules/profile/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="container mx-0">
+  <div class="container">
 
     <!-- First column for liens utiles & localisation -->
     <div class="row justify-content-start mx-2">
