--- a/client-myjss/src/app/modules/profile/components/footer/footer.component.html
+++ b/client-myjss/src/app/modules/profile/components/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer class="footer">
-  <div class="container mx-0">
+<footer [ngClass]="{ 'footer': !isInNavbar }">
+  <div class="container">
 
     <!-- First column for liens utiles & localisation -->
     <div class="row justify-content-start mx-2">
@@ -86,7 +86,7 @@
     <hr>
 
     <!-- Footer with logo, social media and payments -->
-    <div class="mb-3">
+    <div *ngIf="!isInNavbar" class="mb-5 pb-4">
       <div class="row d-flex justify-content-between align-items-center mx-2">
         <div class="col d-flex align-items-center justify-content-start">
           <a href="" class="me-4 d-none d-sm-block">
