--- a/client-myjss/src/app/modules/miscellaneous/components/our-clients/our-clients.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/our-clients/our-clients.component.html
@@ -6,19 +6,22 @@
     <p>Plus de 2 000 professionnels simplifient leurs démarches juridiques en ligne grâce à MYJSS.</p>
   </div>
 
-
   <swiper-container #ourClientsSwiper1 init="false">
-    <swiper-slide *ngFor="let i of evenIndexes" class="pb-3">
-      <div>
-        <img class="card p-2 rounded-2" [src]="'assets/img/logos/logo'+ i +'.svg'" />
-      </div>
-    </swiper-slide>
+    <ng-container *ngFor="let item of [].constructor(20); let i = index">
+      <swiper-slide *ngIf="i%2==0" class="pb-3">
+        <div>
+          <img class="card p-2 rounded-2" [src]="'assets/img/logos/logo'+ i +'.svg'" />
+        </div>
+      </swiper-slide>
+    </ng-container>
   </swiper-container>
   <swiper-container #ourClientsSwiper2 init="false">
-    <swiper-slide *ngFor="let i of oddIndexes" class="pb-5">
-      <div>
-        <img class="card p-2 rounded-2" [src]="'assets/img/logos/logo'+ i +'.svg'" />
-      </div>
-    </swiper-slide>
+    <ng-container *ngFor="let item of [].constructor(20); let i = index">
+      <swiper-slide *ngIf="i%2==1" class="pb-3">
+        <div>
+          <img class="card p-2 rounded-2" [src]="'assets/img/logos/logo'+ i +'.svg'" />
+        </div>
+      </swiper-slide>
+    </ng-container>
   </swiper-container>
 </div>
