--- a/client-myjss/src/app/modules/company/components/our-story-swiper/our-story-swiper.component.css
+++ b/client-myjss/src/app/modules/company/components/our-story-swiper/our-story-swiper.component.css
@@ -1,7 +1,7 @@
 swiper-container {
     width: 100%;
-    height: 80vh;
-    /* Use relative unit for height */
+    /* Use relative unit for height. If changed, change it also in the swiper-slider */
+    height: 70vh;
     display: flex;
     flex-direction: column;
 }
@@ -9,6 +9,8 @@ swiper-container {
 swiper-slide {
     display: flex;
     align-items: center;
+    /* To change height, dont forget to change it in the swiper-container too */
+    max-height: 70vh;
     justify-content: center;
     text-align: center;
     font-size: 18px;
